# gmailnotifier

./: CMakeLists.txt  ProjectHome.md  TODO
branches/gmailnotifer-plasma::services/: build.sh
branches/gmailnotifer-plasma::services/src/applet/: gmailnotifierappletconfig.cpp  gmailnotifierdialog.h  plasma-applet-gmailnotifier.desktop
branches/gmailnotifer-plasma::services/src/dataengine/: gmailatomfeedparser.h  gmailnotifierengine.h  gmailnotifierengine.operations  gmailnotifierservice.cpp
branches/gmailnotifer-plasma_services/: TODO
branches/gmailnotifer-plasma_services/src/applet/: gmailnotifierapplet.cpp  gmailnotifierapplet.h  gmailnotifierappletconfig.cpp  gmailnotifierappletconfig.h  gmailnotifierappletconfig.ui  gmailnotifierdialog.cpp  gmailnotifierdialog.h
branches/gmailnotifer-plasma_services/src/dataengine/: CMakeLists.txt  gmailatomfeedparser.cpp  gmailatomfeedparser.h  gmailnotifiercontainer.cpp  gmailnotifiercontainer.h  gmailnotifierengine.cpp  gmailnotifierengine.h  gmailnotifierengine_old.cpp  gmailnotifierengine_old.h  gmailnotifierservice.cpp  gmailnotifierservice.h  gmailnotifierservicejob.cpp  gmailnotifierservicejob.h  gmailnotifiersource.cpp  gmailnotifiersource.h
branches/gmailnotifier-applet_refactor/: build.sh
branches/gmailnotifier-applet_refactor/src/: CMakeLists.txt
branches/gmailnotifier-applet_refactor/src/applet/: gmailnotifierapplet.h  gmailnotifierappletconfig.cpp  gmailnotifierappletconfig.h  gmailnotifierdialog.cpp
branches/gmailnotifier-applet_refactor/src/dataengine/: gmailatomfeedparser.cpp  gmailnotifierengine.cpp
branches/plasma_services_test/: CMakeLists.txt  plasma-dataengine-pst.desktop  pstengine.cpp  pstengine.h  pstservice.h
playground/Plasma/GMailNotifier/: build.sh
playground/Plasma/GMailNotifier/WorkFiles/: gmail_20_big.xcf
playground/Plasma/GMailNotifier/src/applet/: CMakeLists.txt  gmailnotifierapplet.cpp  gmailnotifierapplet.h  gmailnotifierappletconfig.cpp  gmailnotifierappletconfig.h  gmailnotifierappletconfig.ui
playground/Plasma/GMailNotifier/src/dataengine/: gmailatomfeedparser.cpp  gmailatomfeedparser.h  gmailnotifierengine.cpp  gmailnotifierengine.h  plasma-dataengine-gmailnotifier.desktop
playground/Plasma/GmailNotifier/: CMakeLists.txt  TODO
playground/Plasma/GmailNotifier/src/applet/: CMakeLists.txt  gmailnotifierapplet.cpp  gmailnotifierapplet.h  gmailnotifierapplet.qrc  gmailnotifierappletconfig.cpp  gmailnotifierappletconfig.h  gmailnotifierappletconfig.ui  gmailnotifierdialog.cpp  gmailnotifierdialog.h  plasma-applet-gmailnotifier.desktop
playground/gmailnotifier-applet_refactor/: AUTHORS  CMakeLists.txt  THANKS
playground/gmailnotifier-applet_refactor/WorkFiles/: gmail_20_big.xcf
playground/gmailnotifier-applet_refactor/src/applet/: gmailnotifierapplet.cpp  gmailnotifierapplet.h  gmailnotifierappletconfig.ui  gmailnotifierdialog.cpp  gmailnotifierdialog.h  plasma-applet-gmailnotifier.desktop
playground/gmailnotifier-applet_refactor/src/dataengine/: gmailnotifierengine.operations  gmailnotifiersource.cpp  plasma-dataengine-gmailnotifier.desktop
playground/gmailnotifier-plasma_services/src/applet/: gmailnotifierappletconfig.cpp  gmailnotifierdialog.cpp  plasma-applet-gmailnotifier.desktop
playground/gmailnotifier-plasma_services/src/dataengine/: gmailnotifierengine.h  gmailnotifiersource.h  plasma-dataengine-gmailnotifier.desktop
playground/plasma_services_test/: plasma-dataengine-pst.desktop  pstengine.cpp  pstengine.h  pstjob.cpp  pstjob.h  pstservice.cpp  pstsource.cpp  pstsource.h
src/applet/: CMakeLists.txt  accounts.cpp  accounts.h  defaults.cpp  defaults.h  gmailnotifierapplet.cpp  gmailnotifierapplet.h  gmailnotifierapplet.qrc  gmailnotifierappletconfig.cpp  gmailnotifierappletconfig.h  gmailnotifierappletconfig.ui  gmailnotifierdialog.cpp  gmailnotifierdialog.h  plasma-applet-gmailnotifier.notifyrc
src/applet/i18n/: CMakeLists.txt
src/dataengine/: CMakeLists.txt  gmailnotifiercontainer.cpp  gmailnotifierengine.cpp  gmailnotifierengine.h  gmailnotifierservice.h  gmailnotifierservicejob.cpp  gmailnotifiersource.cpp  gmailnotifiersource.h
trunk/: THANKS  TODO
trunk/playground/Plasma/GmailNotifier/: CMakeLists.txt  build.sh
trunk/playground/Plasma/GmailNotifier/src/dataengine/: CMakeLists.txt  gmailnotifierengine.cpp  gmailnotifierengine.h
trunk/src/applet/: CMakeLists.txt  accounts.cpp  accounts.h  gmailnotifierapplet.cpp  gmailnotifierapplet.h  gmailnotifierappletconfig.cpp  gmailnotifierappletconfig.h  gmailnotifierappletconfig.ui  gmailnotifierdialog.cpp  gmailnotifierdialog.h  plasma-applet-gmailnotifier.desktop  plasma-applet-gmailnotifier.notifyrc
trunk/src/applet/i18n/: i18n.sh
trunk/src/dataengine/: CMakeLists.txt  gmailatomfeedparser.h  gmailnotifiercontainer.cpp  gmailnotifiercontainer.h  gmailnotifierengine.cpp  gmailnotifierengine.operations  gmailnotifierservice.cpp  gmailnotifierservice.h  gmailnotifierservicejob.cpp  gmailnotifierservicejob.h  gmailnotifiersource.h  plasma-dataengine-gmailnotifier.desktop
(+27 files in other folders)
